--- a/styles/sass/pages/_index.scss
+++ b/styles/sass/pages/_index.scss
@@ -4,6 +4,7 @@
 @forward '../../../pages/progress/progress';
 @forward '../../../pages/scholarship-pool/scholarshippool';
 @forward '../../../pages/directed-donate/directeddonate';
+@forward '../../../pages/mint-tokens/minttokens';
 @forward '../../../pages/nfts/nfts';
 @forward '../../../pages/update-metadata/updatemetadata';
 @forward '../../../pages/donors-portal/[id]/scholarsprogress';
