--- a/styles/sass/pages/_homepage.scss
+++ b/styles/sass/pages/_homepage.scss
@@ -1,338 +1,20 @@
-@use '../abstracts/mixins' as *;
+@import '../abstracts/mixins';
 
 .home {
-	&__hero {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		padding-block: 2rem;
-		padding-inline: 2rem;
-		flex-direction: column-reverse;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 
-		@include mq(small) {
-			padding-inline: 4rem;
-			flex-direction: row;
-			gap: 5rem;
-		}
+  h1 {
+    font-size: 3rem;
+    margin-bottom: 2rem;
+  }
 
-		@include mq(medium) {
-			padding-inline: 8rem;
-		}
-
-		&--text-content {
-			display: flex;
-			align-items: flex-start;
-			flex-direction: column;
-			gap: 3rem;
-		}
-
-		&--video-content {
-			border-radius: 1rem;
-			object-fit: cover;
-		}
-	}
-
-	&__brands {
-		padding-block: 3rem;
-		display: flex;
-		align-items: flex-start;
-		justify-content: center;
-		gap: 3rem;
-
-		& > div {
-			gap: 4rem;
-		}
-	}
-
-	&__why-us {
-		background: var(--clr-primary-400);
-		padding: 5rem 3rem;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		gap: 3rem;
-		color: var(--clr-accent-200);
-		text-align: center;
-
-		& > div {
-			display: grid;
-			grid-template-columns: repeat(3, 1fr);
-			gap: 3rem;
-			margin-block: 4rem;
-		}
-
-		& > div > div {
-			padding: 2rem;
-			display: flex;
-			gap: 3rem;
-			justify-content: center;
-			align-items: center;
-			flex-direction: column;
-			background: var(--clr-accent-100);
-			border-radius: 1rem;
-			width: fit-content;
-			color: var(--clr-primary-100);
-
-			& > p {
-				font-size: 1.4rem;
-			}
-		}
-	}
-
-	&__quote {
-		font-size: medium;
-		font-weight: bold;
-		padding: 6rem;
-		text-align: center;
-
-		& span {
-			display: block;
-
-			margin-top: 2rem;
-		}
-	}
-
-	&__statement {
-		padding-block: 2rem;
-
-		@include mq(small) {
-			display: flex;
-			justify-content: space-between;
-		}
-
-		&--text-content {
-			padding: 6rem;
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			justify-content: center;
-			gap: 3rem;
-			text-align: center;
-
-			& h4 {
-				line-height: 1.5;
-			}
-		}
-	}
-
-	&__solutions {
-		display: flex;
-		justify-content: center;
-		flex-direction: column;
-		align-items: center;
-		color: var(--clr-accent-200);
-		text-align: center;
-		padding: 2rem;
-		background: var(--clr-primary-400);
-		gap: 3rem;
-
-		@include mq(small) {
-			padding: 6rem 4rem;
-		}
-
-		@include mq(medium) {
-			padding: 8rem;
-		}
-
-		&--paragraph {
-			width: 60ch;
-		}
-
-		& > div {
-			display: grid;
-			grid-template-columns: repeat(3, 1fr);
-			gap: 3rem;
-			margin-top: 8rem;
-			align-items: baseline;
-		}
-
-		&--items {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			justify-content: center;
-			gap: 2rem;
-			height: 100%;
-
-			& > div > p {
-				margin-top: 2rem;
-				font-size: 1.4rem;
-			}
-
-			& > *:last-child {
-				margin-top: auto;
-			}
-		}
-
-		& > div:last-child {
-			display: block;
-			margin-inline: auto;
-		}
-	}
-
-	&__steps {
-		padding: 2rem;
-		text-align: center;
-
-		@include mq(medium) {
-			padding: 2rem 10rem;
-		}
-
-		&--cta {
-			margin-block: 16rem 3rem;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			flex-direction: column;
-			gap: 2rem;
-		}
-	}
-
-	&__arrows {
-		display: none;
-		position: absolute;
-
-		@include mq(medium) {
-			display: block;
-		}
-
-		&--1,
-		&--3,
-		&--5 {
-			width: 21.8rem;
-			top: 3.5rem;
-		}
-		&--2,
-		&--4 {
-			height: 26rem;
-			top: 4rem;
-		}
-
-		&--2 {
-			right: 13rem;
-		}
-
-		&--4 {
-			left: 13.5rem;
-		}
-	}
-
-	&__step {
-		position: relative;
-		margin-top: 15rem;
-
-		@include mq(small) {
-			display: flex;
-			justify-content: space-evenly;
-			align-items: flex-start;
-		}
-
-		@include mq(medium) {
-			margin-inline: auto;
-		}
-
-		&.alternate {
-			& article:nth-child(1) {
-				background: var(--clr-accent-100);
-				color: var(--clr-primary-100);
-			}
-
-			& article:nth-child(2) {
-				background: var(--clr-primary-400);
-				color: var(--clr-accent-200);
-			}
-		}
-
-		& article {
-			border-radius: 1rem;
-			padding: 1rem 2rem;
-			width: 25rem;
-			height: fit-content;
-			margin-block: 2rem;
-			position: relative;
-			cursor: pointer;
-		}
-
-		& article:hover &--content {
-			opacity: 1;
-		}
-
-		&--content {
-			opacity: 0;
-			position: absolute;
-			width: 100%;
-			left: 0;
-			padding: 2rem;
-			transition: all 100ms ease;
-			border-bottom-left-radius: 1rem;
-			border-bottom-right-radius: 1rem;
-
-			&-1,
-			&-4,
-			&-5 {
-				background: var(--clr-primary-400);
-				color: var(--clr-accent-200);
-			}
-
-			&-2,
-			&-3,
-			&-6 {
-				background: var(--clr-accent-100);
-				color: var(--clr-primary-100);
-			}
-		}
-
-		& article:nth-child(1) {
-			background: var(--clr-primary-400);
-			color: var(--clr-accent-200);
-		}
-
-		& article:nth-child(2) {
-			background: var(--clr-accent-100);
-			color: var(--clr-primary-100);
-		}
-	}
-
-	&__chart {
-		padding-block: 3rem;
-		text-align: center;
-		& a {
-			padding: 0.5rem;
-			display: inline-block;
-			color:rgb(38, 38, 116);
-			text-decoration: underline;
-			text-underline-offset: 0.1em;
-		  }
-	}
-
-	&__piechart {
-		margin: 2rem auto;
-		display: block;
-	}
-
-	&__impact {
-		display: flex;
-		gap: 3rem;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		padding: 3rem 8rem;
-		margin: 5rem auto;
-		text-align: center;
-		line-height: 1.5;
-		background: var(--clr-accent-100);
-		border-radius: 1rem;
-		width: 85%;
-
-		& strong {
-			text-underline-offset: 0.1em;
-			color:rgb(38, 38, 116);
-		}
-
-		& h4 > * {
-			font-weight: 900;
-			text-decoration: underline;
-		}
-	}
+  &__buttons {
+    display: flex;
+    gap: 1rem;
+    margin-top: 2rem;
+  }
 }
