--- a/styles/sass/pages/_index.scss
+++ b/styles/sass/pages/_index.scss
@@ -11,3 +11,4 @@
 @forward '../../../pages/donors-portal/nft-gallery/nftgallery';
 @forward '../../../pages/donors-portal/events/events';
 @forward '../../../pages/donors-portal/bootcamp/bootcamp';
+@forward '../../../pages/redeem/redeem'
