feat: milestone-sc code-nextjs

--- a/styles/sass/pages/_index.scss
+++ b/styles/sass/pages/_index.scss
@@ -10,4 +10,5 @@
 @forward '../../../pages/donors-portal/nft-gallery/nftgallery';
 @forward '../../../pages/donors-portal/events/events';
 @forward '../../../pages/donors-portal/bootcamp/bootcamp';
-@forward '../../../pages/redeem/redeem'
+@forward '../../../pages/redeem/redeem';
+@forward '../../../pages/milestone-sc/milestone-sc'
