--- a/pages/milestone-sc/milestone-sc.scss
+++ b/pages/milestone-sc/milestone-sc.scss
@@ -1,18 +1,39 @@
-.crowdfunding-page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
 
-  h1 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-  }
 
-  p {
+  select {
+    font-size: 1.2rem;
+    color: #555;
+    padding: 0.5rem;
+    width: 100%;
+    max-width: 300px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-bottom: 1rem;
+
+    option {
       font-size: 1.2rem;
       color: #555;
-      text-align: center;
+    }
   }
-}
+
+ 
+
+  .home {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 2rem;
+    }
+  
+    &__buttons {
+      display: flex;
+      gap: 1rem;
+      margin-top: 2rem;
+    }
+  }
+  
