--- a/styles/sass/pages/_index.scss
+++ b/styles/sass/pages/_index.scss
@@ -11,4 +11,7 @@
 @forward '../../../pages/donors-portal/events/events';
 @forward '../../../pages/donors-portal/bootcamp/bootcamp';
 @forward '../../../pages/redeem/redeem';
-@forward '../../../pages/milestone-sc/milestone-sc'
+@forward '../../../pages/milestone-sc/milestone-sc';
+@forward '../../../pages/milestone-sc/authority/authority.scss';
+@forward '../../../pages/milestone-sc/examiner/examiner.scss';
+@forward '../../../pages/milestone-sc/school/school.scss';
