fix: add student tabs

--- a/styles/sass/pages/_index.scss
+++ b/styles/sass/pages/_index.scss
@@ -15,3 +15,4 @@
 @forward '../../../pages/milestone-sc/authority/authority.scss';
 @forward '../../../pages/milestone-sc/examiner/examiner.scss';
 @forward '../../../pages/milestone-sc/school/school.scss';
+@forward '../../../pages/milestone-sc/student/student.scss';
